--- a/mcml/mcml.vcxproj
+++ b/mcml/mcml.vcxproj
@@ -118,6 +118,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalIncludeDirectories>..\boost_1_77_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,6 +135,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>..\boost_1_77_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,9 +145,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\io\io.hpp" />
     <ClInclude Include="..\mcml.hpp" />
+    <ClInclude Include="..\mcmlnr.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\io\io.cpp" />
     <ClCompile Include="..\mcmlgo.cpp" />
     <ClCompile Include="..\mcmlio.cpp" />
     <ClCompile Include="..\mcmlmain.cpp" />
