--- a/mcml/mcml.vcxproj.filters
+++ b/mcml/mcml.vcxproj.filters
@@ -13,10 +13,22 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Исходные файлы\io">
+      <UniqueIdentifier>{292135de-b4ff-4be6-8d80-c1809f1a7576}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы">
+      <UniqueIdentifier>{a8d991ac-3654-4dac-b9bf-1c7e7846d172}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\mcml.hpp">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\io\io.hpp">
+      <Filter>Исходные файлы\io</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mcmlnr.hpp">
+      <Filter>Файлы</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -29,8 +41,11 @@
     <ClCompile Include="..\mcmlmain.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\io\io.cpp">
+      <Filter>Исходные файлы\io</Filter>
+    </ClCompile>
     <ClCompile Include="..\mcmlnr.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
